feat: add hald of error handler
