# internal/controller/article_controller.go
@@ -2,8 +2,10 @@ package controller
 
 import (
 	"github.com/gin-gonic/gin"
+	"myasd/internal/errs"
 	"myasd/internal/models"
 	// "myasd/internal/service"
+	"errors"
 	"net/http"
 )
 
@@ -13,15 +15,16 @@ import (
 // @Accept json
 // @Produce json
 // @Success 200 {array} models.Article
-// @Failure 401 {object} map[string]string
+// @Failure 401 {object} CommonError
 // @Router /articles [get]
 // @Security BearerAuth
 func (contr *ControllerStruct) getAllArticles(c *gin.Context) {
 	userID, exists := c.Get("user_id")
 	if !exists {
-		c.JSON(http.StatusUnauthorized, gin.H{
-			"error": "unauthorized",
-		})
+		contr.handleError(c, errs.ErrUserIDNotFoundInContext)
+		// c.JSON(http.StatusUnauthorized, gin.H{
+		// 	"error": "unauthorized",
+		// })
 		return
 	}
 
@@ -36,9 +39,7 @@ func (contr *ControllerStruct) getAllArticles(c *gin.Context) {
 
 	allArticles, err := contr.serv.GetAllArticles(id)
 	if err != nil {
-		c.JSON(http.StatusNotFound, gin.H{
-			"error": err.Error(),
-		})
+		contr.handleError(c, err)
 		return
 	}
 	c.JSON(http.StatusOK, gin.H{
@@ -60,17 +61,13 @@ func (contr *ControllerStruct) getAllArticles(c *gin.Context) {
 func (contr *ControllerStruct) createArticle(c *gin.Context) {
 	var input models.Article
 	if err := c.ShouldBindJSON(&input); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-		})
+		contr.handleError(c, errors.Join(errs.ErrInvalidRequestBody, err))
 		return
 	}
 
 	userID, exists := c.Get("user_id")
 	if !exists {
-		c.JSON(http.StatusUnauthorized, gin.H{
-			"error": "unauthorized",
-		})
+		contr.handleError(c, errs.ErrUserIDNotFoundInContext)
 		return
 	}
 
@@ -78,14 +75,10 @@ func (contr *ControllerStruct) createArticle(c *gin.Context) {
 
 	err := contr.serv.CreateArticle(input)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
+		contr.handleError(c, err)
 		return
 	}
-	c.JSON(http.StatusCreated, gin.H{
-		"message": input,
-	})
+	c.JSON(http.StatusCreated, CommonReponse{"article created successfully"})
 }
 
 // @Summary Get all articles of the user
@@ -96,31 +89,26 @@ func (contr *ControllerStruct) createArticle(c *gin.Context) {
 // @Success 200 {array} models.Article
 // @Failure 500 {object} map[string]string
 // @Failure 401 {object} map[string]string
-// @Router /articles [get]
+// @Router /articles/{id} [get]
 // @Security BearerAuth
 func (contr *ControllerStruct) getArticleByID(c *gin.Context) {
 	userID, exists := c.Get("user_id")
 	if !exists {
-		c.JSON(http.StatusUnauthorized, gin.H{
-			"error": "unauthorized",
-		})
+		contr.handleError(c, errs.ErrUserIDNotFoundInContext)
 		return
 	}
-	id, ok := userID.(int)
-	if !ok {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": "invalid user id type",
-		})
-		return
-	}
+	id := userID.(int)
 
 	articleID := c.Param("id")
 
+	if id < 1 {
+		contr.handleError(c, errs.ErrInvalidPathParam)
+		return
+	}
+
 	article, err := contr.serv.GetArticleByID(id, articleID)
 	if err != nil {
-		c.JSON(http.StatusNotFound, gin.H{
-			"message": err.Error(),
-		})
+		contr.handleError(c, err)
 		return
 	}
 
@@ -142,29 +130,29 @@ func (contr *ControllerStruct) getArticleByID(c *gin.Context) {
 // @Failure 401 {object} map[string]string
 // @Failure 500 {object} map[string]string
 // @Router /articles/{id} [patch]
-func (ctr *ControllerStruct) PatchArticle(c *gin.Context) {
+func (contr *ControllerStruct) PatchArticle(c *gin.Context) {
 	userIDInterface, exists := c.Get("user_id")
 	if !exists {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized"})
+		contr.handleError(c, errs.ErrUserIDNotFoundInContext)
 		return
 	}
 
 	userID, ok := userIDInterface.(int)
 	if !ok {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "invalid user id"})
+		contr.handleError(c, errs.ErrUserIDNotFoundInContext)
 		return
 	}
 
 	articleID := c.Param("id")
 
 	var updates map[string]interface{}
-	if err := c.BindJSON(&updates); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid json"})
+	if err := c.ShouldBindJSON(&updates); err != nil {
+		contr.handleError(c, errors.Join(errs.ErrInvalidRequestBody, err))
 		return
 	}
 
-	if err := ctr.serv.PatchArticle(userID, articleID, updates); err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+	if err := contr.serv.PatchArticle(userID, articleID, updates); err != nil {
+		contr.handleError(c, err)
 		return
 	}
 
@@ -186,26 +174,21 @@ func (ctr *ControllerStruct) PatchArticle(c *gin.Context) {
 func (contr *ControllerStruct) deleteArticle(c *gin.Context) {
 	userID, exists := c.Get("user_id")
 	if !exists {
-		c.JSON(http.StatusUnauthorized, gin.H{
-			"error": "unauthorized",
-		})
+		contr.handleError(c, errs.ErrUserIDNotFoundInContext)
 		return
 	}
-	id, ok := userID.(int)
-	if !ok {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "invalid user id type",
-		})
-		return
-	}
+	id := userID.(int)
 
 	articleID := c.Param("id")
 
+	if id < 1 {
+		contr.handleError(c, errs.ErrInvalidPathParam)
+		return
+	}
+
 	err := contr.serv.DeleteArticle(id, articleID)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
+		contr.handleError(c, err)
 		return
 	}
 
