# internal/controller/responses.go
@@ -1,0 +1,11 @@
+package controller
+
+import ()
+
+type CommonError struct {
+	Error string `json:"error"`
+}
+
+type CommonReponse struct {
+	Message string `json:"message"`
+}
